# hala-renderer

./: Cargo.toml  README.md  README_CN.md  README_JP.md  README_KO.md
src/: compute_program.rs  drz_renderer.rs  envmap.rs  error.rs  graphics_program.rs  lib.rs  prelude.rs  raytracing_program.rs  renderer.rs  rt_renderer.rs  rz_renderer.rs  shader_cache.rs
src/scene/: bounds.rs  meshlet.rs  mod.rs  vertex.rs
src/scene/cpu/: camera.rs  image_data.rs  light.rs  material.rs  mesh.rs  mod.rs  node.rs  scene.rs
src/scene/gpu/: camera.rs  light.rs  material.rs  mesh.rs  mod.rs  scene.rs
src/scene/loader/: gltf_loader.rs  gpu_uploader.rs  mod.rs
