[package]
name = "hala-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
hala-gfx = {path = "../hala-gfx"}
anyhow = {version = "1", features = ["backtrace"]}
thiserror = "1"
log = "0"
winit = {version = "0.29", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"]}
glam = {version = "0", default-features = false, features = ["std"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
rayon = "1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg", "png", "pnm", "tga", "hdr", "exr"]

[dependencies.gltf]
version = "1"
features = [
    "extras",
    "KHR_lights_punctual",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_unlit",
    "KHR_texture_transform",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_materials_specular",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_emissive_strength",
]